[gd_scene load_steps=4 format=3 uid="uid://b0pd1kpnorygt"]

[ext_resource type="Script" uid="uid://be11m4nmo1s8d" path="res://scenes/interactable/weaponbench/wb_weapon_display.gd" id="1_ky6ps"]

[sub_resource type="Environment" id="Environment_453rg"]

[sub_resource type="World3D" id="World3D_ky6ps"]
environment = SubResource("Environment_453rg")

[node name="WbWeaponDisplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ky6ps")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="MainVbox" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Weapon_Display_Label" type="Label" parent="PanelContainer/MarginContainer/MainVbox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Weapon Display"

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer/MainVbox"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="WeaponName_Label" type="Label" parent="PanelContainer/MarginContainer/MainVbox/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Weapon Name"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/MainVbox/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="SubViewportContainer" type="SubViewportContainer" parent="PanelContainer/MarginContainer/MainVbox/VBoxContainer2/MarginContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="PanelContainer/MarginContainer/MainVbox/VBoxContainer2/MarginContainer/SubViewportContainer"]
unique_name_in_owner = true
world_3d = SubResource("World3D_ky6ps")
handle_input_locally = false
size = Vector2i(1148, 590)
render_target_update_mode = 4

[node name="WorldRoot" type="Node3D" parent="PanelContainer/MarginContainer/MainVbox/VBoxContainer2/MarginContainer/SubViewportContainer/SubViewport"]
unique_name_in_owner = true

[node name="WeaponPivot" type="Node3D" parent="PanelContainer/MarginContainer/MainVbox/VBoxContainer2/MarginContainer/SubViewportContainer/SubViewport/WorldRoot"]
unique_name_in_owner = true

[node name="PreviewCamera" type="Camera3D" parent="PanelContainer/MarginContainer/MainVbox/VBoxContainer2/MarginContainer/SubViewportContainer/SubViewport"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.2)

[node name="OmniLight3D" type="OmniLight3D" parent="PanelContainer/MarginContainer/MainVbox/VBoxContainer2/MarginContainer/SubViewportContainer/SubViewport"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
